[package]
name = "ldap-log"
version = "0.1.0"
edition = "2021"
authors = ["zu1k <i@lgf.im>"]
description = "LDAP server for log."
readme = "README.md"
homepage = "https://github.com/zu1k/ldap-log"
repository = "https://github.com/zu1k/ldap-log"
keywords = ["ldap"]
exclude = [".github/"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
futures = "0.3"
ldap3_server = "0.1"
tokio = { version = "1.22", features = ["full"] }
tokio-util = "0.6"